--- a/mystyles.scss
+++ b/mystyles.scss
@@ -181,6 +181,7 @@ html {
     }
 
     background-color: var(--cum);
+    color: #fcfaf4;
     border-radius: 15px;
     box-shadow: 0px 3px 6px #00000029;
     padding: 13px 20px;
@@ -292,10 +293,11 @@ html {
   button {
     background-color: var(--cum);
     border-radius: 15px;
+    color: #fcfaf4;
     box-shadow: 0px 3px 6px #00000029;
     padding: 13px 20px;
     border: none;
-    font-weight: bold;
+    // font-weight: bold;
     // display: flex;
     align-items: center;
     justify-content: center;
