--- a/mystyles.css
+++ b/mystyles.css
@@ -158,9 +158,10 @@ html {
 }
 .main button {
   background-color: var(--cum);
+  color: #3f4952;
   border-radius: 15px;
   box-shadow: 0px 3px 6px #00000029;
-  padding: 13px 20px;
+  padding: 13px 30px;
   margin-top: 50px;
   border: none;
   font-weight: bold;
@@ -255,11 +256,11 @@ html {
   height: 50px;
   background: #3f4952;
   color: #fcfaf4;
-  font-weight: bold;
 }
 #formin button {
   background-color: var(--cum);
   border-radius: 15px;
+  color: #3f4952;
   box-shadow: 0px 3px 6px #00000029;
   padding: 13px 20px;
   border: none;
@@ -272,11 +273,20 @@ html {
 }
 
 .footer {
-  background-color: var(--white);
+  background-color: #fcfaf4;
   box-shadow: 0px 3px 6px #00000029;
   display: grid;
   grid-template-columns: 1fr 1fr;
   padding: 20px 40px;
+}
+@media (max-width:550px) {
+  .footer {
+    display: grid;
+    grid-template-columns: 1fr;
+    width: 100%;
+    padding: 20px 20px 40px;
+    text-align: center;
+  }
 }
 .footer img {
   height: 51px;
@@ -291,11 +301,24 @@ html {
   justify-content: flex-end;
   gap: 20px;
 }
+@media (max-width:550px) {
+  .footer #socials {
+    justify-content: center;
+  }
+}
 .footer #rights {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+}
+@media (max-width:550px) {
+  .footer #rights {
+    display: grid;
+    grid-template-columns: 1fr;
+    width: 100%;
+    padding: 0 20px;
+  }
 }
 
 /*# sourceMappingURL=mystyles.css.map */
