--- a/mystyles.scss
+++ b/mystyles.scss
@@ -181,10 +181,10 @@ html {
     }
 
     background-color: var(--cum);
-    color: #fcfaf4;
+    color: #3f4952;
     border-radius: 15px;
     box-shadow: 0px 3px 6px #00000029;
-    padding: 13px 20px;
+    padding: 13px 30px;
     margin-top: 50px;
     border: none;
     font-weight: bold;
@@ -288,16 +288,15 @@ html {
     height: 50px;
     background: #3f4952;
     color: #fcfaf4;
-    font-weight: bold;
   }
   button {
     background-color: var(--cum);
     border-radius: 15px;
-    color: #fcfaf4;
+    color: #3f4952;
     box-shadow: 0px 3px 6px #00000029;
     padding: 13px 20px;
     border: none;
-    // font-weight: bold;
+    font-weight: bold;
     // display: flex;
     align-items: center;
     justify-content: center;
@@ -311,7 +310,15 @@ html {
 // Footer
 
 .footer {
-  background-color: var(--white);
+  @media ($mobile) {
+    display: grid;
+    grid-template-columns: 1fr;
+    width: 100%;
+    padding: 20px 20px 40px;
+    text-align: center;
+  }
+
+  background-color: #fcfaf4;
   box-shadow: 0px 3px 6px #00000029;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -327,6 +334,10 @@ html {
   }
 
   #socials {
+    @media ($mobile) {
+      justify-content: center;
+    }
+
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -335,6 +346,13 @@ html {
   }
 
   #rights {
+    @media ($mobile) {
+      display: grid;
+      grid-template-columns: 1fr;
+      width: 100%;
+      padding: 0 20px;
+    }
+
     display: flex;
     flex-direction: column;
     align-items: flex-start;
