--- a/mystyles.css
+++ b/mystyles.css
@@ -102,6 +102,7 @@ html {
   background-color: var(--cum);
   width: 100vw;
   overflow-x: hidden;
+  line-height: 1.5;
 }
 
 .website {
@@ -114,6 +115,16 @@ html {
   .website {
     margin-top: 140px;
   }
+}
+
+button {
+  background-color: var(--cum);
+  color: #3f4952;
+  border-radius: 15px;
+  box-shadow: 0px 3px 6px #00000029;
+  padding: 13px 30px;
+  border: none;
+  font-weight: bold;
 }
 
 .main {
@@ -131,6 +142,7 @@ html {
   }
 }
 .main h1 {
+  line-height: 1.1;
   font-size: 50px;
 }
 @media (max-width:550px) {
@@ -157,14 +169,7 @@ html {
   }
 }
 .main button {
-  background-color: var(--cum);
-  color: #3f4952;
-  border-radius: 15px;
-  box-shadow: 0px 3px 6px #00000029;
-  padding: 13px 30px;
-  margin-top: 50px;
-  border: none;
-  font-weight: bold;
+  margin-top: 40px;
 }
 @media (max-width:550px) {
   .main button {
@@ -257,20 +262,6 @@ html {
   background: #3f4952;
   color: #fcfaf4;
 }
-#formin button {
-  background-color: var(--cum);
-  border-radius: 15px;
-  color: #3f4952;
-  box-shadow: 0px 3px 6px #00000029;
-  padding: 13px 20px;
-  border: none;
-  font-weight: bold;
-  align-items: center;
-  justify-content: center;
-  padding: 0 10px;
-  height: 35px;
-  outline: none;
-}
 
 .footer {
   background-color: #fcfaf4;
@@ -281,18 +272,14 @@ html {
 }
 @media (max-width:550px) {
   .footer {
-    display: grid;
-    grid-template-columns: 1fr;
+    display: block;
     width: 100%;
-    padding: 20px 20px 40px;
+    padding: 20px;
     text-align: center;
   }
 }
 .footer img {
-  height: 51px;
-}
-.footer p {
-  margin: none;
+  height: 50px;
 }
 .footer #socials {
   display: flex;
@@ -319,6 +306,17 @@ html {
     width: 100%;
     padding: 0 20px;
   }
+}
+.footer #rights p {
+  margin-bottom: 0;
+}
+@media (max-width:550px) {
+  .footer #rights p {
+    margin-bottom: 20px;
+  }
+}
+.footer #rights img {
+  margin: auto;
 }
 
 /*# sourceMappingURL=mystyles.css.map */
