--- a/sass/mystyles.scss
+++ b/sass/mystyles.scss
@@ -1,3 +1,6 @@
+@import "normalize";
+@import "variables";
+
 *,
 *:before,
 *:after {
@@ -7,40 +10,6 @@
 ::placeholder {
   color: var(--cum);
   opacity: 1;
-}
-
-/* Color Variables */
-
-:root {
-  --cum: #fcfaf4;
-  --white: #ffffff;
-  --shadow: #00000029;
-  --text: #3f4952;
-  --scum: #b4b4b4;
-}
-
-$mobile: "max-width:550px";
-
-@keyframes test {
-  0% {
-    color: red;
-  }
-  50% {
-    color: pink;
-  }
-  100% {
-    color: red;
-  }
-}
-
-@keyframes fadein {
-  0% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
 }
 
 /* Default styles */
@@ -82,6 +51,10 @@ a:active {
       gap: 0px;
       display: grid;
       grid-template-columns: repeat(3, 1fr);
+    }
+
+    a.active {
+      color: var(--active);
     }
 
     display: flex;
