--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -365,14 +365,44 @@ a:active {
   color: inherit;
 }
 
-body,
-html {
+body {
   color: var(--text);
   font-family: Poppins;
   background-color: var(--cum);
-  width: 100vw;
-  overflow-x: hidden;
   line-height: 1.5;
+  padding-top: 100px;
+}
+
+button {
+  background-color: var(--cum);
+  color: #3f4952;
+  border-radius: 15px;
+  box-shadow: 0px 3px 6px #00000029;
+  padding: 13px 30px;
+  border: none;
+  font-weight: bold;
+}
+button:hover {
+  animation: anime both 0.25s ease-in-out;
+}
+
+.container {
+  width: 100%;
+  max-width: 1320px;
+  padding: 0 20px;
+  margin: auto;
+}
+
+.grid-2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 80px;
+}
+@media (max-width:550px) {
+  .grid-2 {
+    grid-template-columns: 1fr;
+    gap: 40px;
+  }
 }
 
 .header {
@@ -399,71 +429,48 @@ html {
     text-align: center;
   }
 }
+.header img {
+  height: 40px;
+}
 .header .linka {
   display: flex;
   gap: 40px;
 }
 @media (max-width:550px) {
   .header .linka {
-    gap: 0px;
+    gap: 0;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
   }
 }
-.header .linka a:active {
+.header .linka a {
+  text-decoration: underline 0.15em transparent;
+  transition: text-decoration-color 200ms, color 200ms, transform 200ms;
+}
+.header .linka a.active {
   color: var(--active);
 }
-.header img {
-  height: 40px;
-}
-.header h4 {
-  margin: 0;
-  text-decoration: underline 0.15em #ff791700;
-  transition: text-decoration-color 200ms;
-}
-@media (max-width:550px) {
-  .header h4 {
-    font-size: 14px;
-  }
-}
-.header h4:hover {
+.header .linka a:hover {
   color: var(--active);
-  text-decoration-color: #ff7917ff;
+  text-decoration-color: var(--active);
   transform: translateY(-2px);
 }
-
-#active {
-  color: var(--active);
-}
-
-.website {
-  width: 100%;
-  max-width: 1320px;
-  padding: 0 20px;
-  margin: 180px auto 0 auto;
+.header .linka a h4 {
+  margin: 0;
 }
 @media (max-width:550px) {
-  .website {
-    margin-top: 140px;
+  .header .linka a h4 {
+    font-size: 14px;
   }
-}
-
-button {
-  background-color: var(--cum);
-  color: #3f4952;
-  border-radius: 15px;
-  box-shadow: 0px 3px 6px #00000029;
-  padding: 13px 30px;
-  border: none;
-  font-weight: bold;
-}
-button:hover {
-  animation: anime both 0.25s ease-in-out;
 }
 
 #learn {
   color: #ff7917;
   font-weight: bold;
+}
+
+.index {
+  padding-top: 80px;
 }
 
 .main {
@@ -699,19 +706,7 @@ button:hover {
   margin-left: 0px;
 }
 
-.contact {
-  margin-top: 100px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-.contact img {
-  width: 100%;
-  height: 800px;
-  object-fit: cover;
-}
-
 .shoppy {
-  margin-top: 100px;
   position: relative;
   padding: 80px;
 }
@@ -758,13 +753,8 @@ button:hover {
 }
 .shopflavors .note {
   position: sticky;
-  top: 20px;
-  left: 20px;
+  top: 120px;
   align-self: start;
-}
-
-.shop {
-  padding: 0px 300px;
 }
 
 .milked {
@@ -826,14 +816,9 @@ button:hover {
 }
 
 .intromilk {
-  padding: 180px 300px 80px 300px;
+  padding: 80px 20px;
 }
 
-.aboutmilk {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 80px;
-}
 .aboutmilk img {
   max-height: 420px;
   width: 100%;
@@ -848,17 +833,12 @@ button:hover {
 
 .truth {
   background: linear-gradient(#414951, #000000);
-  padding: 80px 300px;
+  padding: 80px 20px;
   color: white;
 }
 .truth #cow {
   border-radius: 50px;
   width: 100%;
-}
-.truth .abouttruth {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 80px;
 }
 
 .more {
@@ -955,7 +935,6 @@ button:hover {
 }
 
 .contact {
-  margin-top: 100px;
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
