--- a/sass/_rootstyles.scss
+++ b/sass/_rootstyles.scss
@@ -17,12 +17,42 @@ a:active {
   color: inherit;
 }
 
-body,
-html {
+body {
   color: var(--text);
   font-family: Poppins;
   background-color: var(--cum);
-  width: 100vw;
-  overflow-x: hidden;
   line-height: 1.5;
+  padding-top: $header-height;
+}
+
+button {
+  background-color: var(--cum);
+  color: #3f4952;
+  border-radius: 15px;
+  box-shadow: 0px 3px 6px #00000029;
+  padding: 13px 30px;
+  border: none;
+  font-weight: bold;
+
+  &:hover {
+    animation: anime both 0.25s ease-in-out;
+  }
+}
+
+.container {
+  width: 100%;
+  max-width: 1320px;
+  padding: 0 20px;
+  margin: auto;
+}
+
+.grid-2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 80px;
+
+  @media ($mobile) {
+    grid-template-columns: 1fr;
+    gap: 40px;
+  }
 }
