--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -417,7 +417,7 @@ button:hover {
   top: 0px;
   left: 0px;
   right: 0px;
-  background-color: var(--white);
+  background-color: red;
   box-shadow: 0px 3px 6px #00000029;
 }
 @media (max-width:550px) {
