--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -18,7 +18,7 @@
   top: 0px;
   left: 0px;
   right: 0px;
-  background-color: red;
+  background-color: var(--white);
   box-shadow: 0px 3px 6px #00000029;
 
   img {
