--- a/sass/_contactform.scss
+++ b/sass/_contactform.scss
@@ -24,6 +24,12 @@
     ::placeholder {
       color: #fcfaf450;
     }
+
+    button {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
   }
 
   input,
