--- a/sass/_form.scss
+++ b/sass/_form.scss
@@ -54,6 +54,9 @@
     button {
       width: 100%;
       height: 50px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
     input {
       width: 100%;
