--- a/sass/_rootstyles.scss
+++ b/sass/_rootstyles.scss
@@ -26,13 +26,18 @@ body {
 }
 
 button {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  place-items: center;
   background-color: var(--cum);
   color: #3f4952;
   border-radius: 15px;
   box-shadow: 0px 3px 6px #00000029;
-  padding: 13px 30px;
+  padding: 10px 25px;
   border: none;
   font-weight: bold;
+  font-size: 18px;
+  gap: 5px;
 
   &:hover {
     animation: anime both 0.25s ease-in-out;
