--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -741,6 +741,11 @@ button:hover {
   position: relative;
   padding: 80px;
 }
+@media (max-width:550px) {
+  .shoppy {
+    padding: 40px;
+  }
+}
 .shoppy .milkback {
   left: 0;
   top: 0;
@@ -771,9 +776,21 @@ button:hover {
   font-size: 50px;
   margin: 0px;
 }
+@media (max-width:550px) {
+  .shoppy .shoppytext h1 {
+    text-align: center;
+    font-size: 40px;
+  }
+}
 .shoppy .shoppytext p {
   width: 600px;
   text-align: center;
+}
+@media (max-width:550px) {
+  .shoppy .shoppytext p {
+    width: 100%;
+    margin-bottom: 0px;
+  }
 }
 
 .shopflavors {
@@ -782,16 +799,36 @@ button:hover {
   gap: 40px;
   padding-top: 80px;
 }
+@media (max-width:550px) {
+  .shopflavors {
+    grid-template-columns: 1fr;
+    padding-top: 30px;
+  }
+}
 .shopflavors .note {
   position: sticky;
   top: 120px;
   align-self: start;
+}
+@media (max-width:550px) {
+  .shopflavors .note {
+    padding: 10px 12px;
+    position: static;
+    top: 0px;
+    align-self: auto;
+    order: -1;
+  }
 }
 
 .milked {
   display: grid;
   gap: 40px;
   grid-template-rows: 1fr;
+}
+@media (max-width:550px) {
+  .milked {
+    padding-bottom: 30px;
+  }
 }
 .milked .mflavors {
   display: flex;
@@ -801,16 +838,39 @@ button:hover {
   box-shadow: 0px 3px 6px #00000029;
   border-radius: 25px;
 }
+@media (max-width:550px) {
+  .milked .mflavors {
+    display: block;
+    padding: 20px;
+  }
+}
 .milked .flavtext {
-  padding-left: 40px;
-  padding-right: 40px;
+  padding: 0 40px;
+}
+@media (max-width:550px) {
+  .milked .flavtext {
+    text-align: center;
+    padding: 0 20px;
+  }
 }
 .milked .buy {
   filter: grayscale(1);
 }
+@media (max-width:550px) {
+  .milked .buy {
+    width: 100%;
+    margin-bottom: 10px;
+    margin-top: 30px;
+  }
+}
 .milked img {
   padding: 106px 40px;
   border-radius: 25px 0 0 25px;
+}
+@media (max-width:550px) {
+  .milked img {
+    display: none;
+  }
 }
 .milked #fire {
   background-color: #fff0e3;
@@ -826,12 +886,24 @@ button:hover {
   font-size: 16px;
   color: #b4b4b4;
 }
+@media (max-width:550px) {
+  #shoplabel {
+    font-size: 14px;
+    margin: 0px;
+    padding-bottom: 10px;
+  }
+}
 
 #recyclegrid {
   display: flex;
   width: 100%;
   align-items: center;
   gap: 8px;
+}
+@media (max-width:550px) {
+  #recyclegrid {
+    flex-direction: column;
+  }
 }
 
 #hotshop {
@@ -844,6 +916,11 @@ button:hover {
 
 #recycleshop {
   color: #72a03f;
+}
+@media (max-width:550px) {
+  #recycleshop {
+    margin: 0px;
+  }
 }
 
 .intromilk {
