--- a/sass/_contactform.scss
+++ b/sass/_contactform.scss
@@ -1,8 +1,14 @@
 #contactin {
   @media ($mobile) {
-    padding: 20px 30px 20px 30px;
+    padding: 30px 30px;
   }
 
+  p {
+    @media ($mobile) {
+      font-size: 14px;
+    }
+    font-weight: 200;
+  }
   color: var(--cum);
   font-family: Poppins;
   background-color: var(--text);
@@ -12,13 +18,20 @@
   margin: 0px;
 
   h2 {
+    @media ($mobile) {
+      font-size: 30px;
+    }
     margin: 0px;
     font-size: 42px;
   }
 
   #contactform {
+    @media ($mobile) {
+      padding-bottom: 20px;
+    }
+    padding-top: 10px;
     display: grid;
-    padding: 0px 100px;
+    width: 100%;
     gap: 20px;
 
     ::placeholder {
@@ -73,10 +86,16 @@
   }
 }
 .contact {
+  @media ($mobile) {
+    grid-template-columns: 1fr;
+  }
   display: grid;
   grid-template-columns: 1fr 1fr;
 
   img {
+    @media ($mobile) {
+      display: none;
+    }
     width: 100%;
     height: 800px;
     object-fit: cover;
