--- a/sass/_contactform.scss
+++ b/sass/_contactform.scss
@@ -6,23 +6,28 @@
   p {
     @media ($mobile) {
       font-size: 14px;
+      text-align: center;
     }
     font-weight: 200;
   }
   color: var(--cum);
   font-family: Poppins;
   background-color: var(--text);
-  place-content: center;
-  text-align: center;
-  padding: 60px;
+  display: flex;
+  flex-direction: column;
+  place-items: center;
+  padding: 60px 60px 0px 60px;
   margin: 0px;
+  width: 100%;
 
   h2 {
     @media ($mobile) {
       font-size: 30px;
     }
+    text-align: center;
     margin: 0px;
     font-size: 42px;
+    width: 100%;
   }
 
   #contactform {
@@ -33,6 +38,7 @@
     display: grid;
     width: 100%;
     gap: 20px;
+    max-width: 600px;
 
     ::placeholder {
       color: #fcfaf450;
@@ -97,7 +103,7 @@
       display: none;
     }
     width: 100%;
-    height: 800px;
+    height: 750px;
     object-fit: cover;
   }
 }
