--- a/sass/_form.scss
+++ b/sass/_form.scss
@@ -52,7 +52,7 @@
     padding: 10px 20px;
     height: 50px;
     background: #3f4952;
-    color: #fcfaf4;
+    color: #fcfaf480;
   }
   .emails {
     @media ($mobile) {
