--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -67,11 +67,15 @@
   text-align: center;
   background: #3f4952;
   color: white;
-  padding: 80px 0px;
+  font-size: 20px;
+  padding-top: 40px;
+  padding-bottom: 80px;
 
   p {
-    max-width: 500px;
+    max-width: 600px;
     width: 100%;
     text-align: center;
+    font-size: 18px;
+    margin: 0px;
   }
 }
