--- a/sass/_shop.scss
+++ b/sass/_shop.scss
@@ -64,6 +64,7 @@
   grid-template-columns: 3fr 1fr;
   gap: 40px;
   padding-top: 80px;
+  padding-bottom: 60px;
 
   .note {
     @media ($mobile) {
