--- a/public/sass/mystyles.scss
+++ b/public/sass/mystyles.scss
@@ -1,14 +1,15 @@
 @import "normalize";
 @import "variables";
 @import "rootstyles";
+@import "button";
+@import "form";
+
 @import "header";
-@import "main";
+@import "footer";
+@import "hero";
 @import "flavors";
 @import "info";
-@import "form";
-@import "footer";
-@import "shame";
+@import "email";
 @import "shop";
 @import "about";
-@import "animations";
 @import "contactform";
