--- a/public/css/mystyles.css
+++ b/public/css/mystyles.css
@@ -338,23 +338,17 @@ template {
 }
 
 :root {
-  --cum: #fcfaf4;
+  --milk: #fcf8ff;
   --white: #ffffff;
-  --shadow: #00000029;
-  --text: #3f4952;
-  --scum: #b4b4b4;
-  --active: #ff7917;
+  --text: #320521;
+  --active: #8286ea;
+  --neutral: #b4b4b4;
 }
 
 *,
 *:before,
 *:after {
   box-sizing: border-box;
-}
-
-::placeholder {
-  color: #fcfaf480;
-  opacity: 1;
 }
 
 a,
@@ -368,27 +362,18 @@ a:active {
 body {
   color: var(--text);
   font-family: Poppins;
-  background-color: var(--cum);
+  background-color: var(--milk);
   line-height: 1.5;
   padding-top: 100px;
 }
 
-button {
-  display: grid;
-  grid-template-columns: 1fr 3fr;
-  place-items: center;
-  background-color: var(--cum);
-  color: #3f4952;
-  border-radius: 15px;
-  box-shadow: 0px 3px 6px #00000029;
-  padding: 10px 25px;
-  border: none;
+strong {
+  color: var(--active);
   font-weight: bold;
-  font-size: 18px;
-  gap: 5px;
 }
-button:hover {
-  animation: anime both 0.25s ease-in-out;
+
+small {
+  font-size: 70%;
 }
 
 .container {
@@ -398,19 +383,82 @@ button:hover {
   margin: auto;
 }
 
-.grid-2 {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 80px;
-}
-@media (max-width:550px) {
-  .grid-2 {
-    grid-template-columns: 1fr;
-    gap: 40px;
-  }
+.hot {
+  color: #ff7917 !important;
 }
 
-.header {
+.cold {
+  color: #3ba7c7 !important;
+}
+
+.recycle {
+  color: #72a03f !important;
+}
+
+button {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--active);
+  color: var(--milk);
+  border-radius: 15px;
+  box-shadow: 0px 3px 6px #00000029;
+  padding: 0px 30px;
+  height: 60px;
+  border: none;
+  font-weight: bold;
+  font-size: 18px;
+  gap: 5px;
+  white-space: nowrap;
+  cursor: pointer;
+  transition: background-color 0.25s ease-in-out, transform 0.25s ease-in-out;
+}
+button:not(:disabled):hover {
+  transform: translateY(-5px);
+}
+button:disabled {
+  cursor: not-allowed;
+  box-shadow: none;
+  background-color: var(--milk);
+  color: var(--text);
+}
+
+input,
+select,
+textarea {
+  border-radius: 15px;
+  border: solid 2px var(--milk);
+  display: block;
+  width: 100%;
+  padding: 10px 20px;
+  background: var(--text);
+  color: var(--milk);
+}
+input:focus,
+select:focus,
+textarea:focus {
+  background-color: var(--milk);
+  outline: 0;
+  color: var(--text);
+}
+input ::placeholder,
+select ::placeholder,
+textarea ::placeholder {
+  color: #fcfaf480;
+  opacity: 1;
+}
+
+input,
+select {
+  height: 60px;
+}
+
+textarea {
+  height: 100px;
+  resize: none;
+}
+
+header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -425,8 +473,8 @@ button:hover {
   background-color: var(--white);
   box-shadow: 0px 3px 6px #00000029;
 }
-@media (max-width:550px) {
-  .header {
+@media (max-width:600px) {
+  header {
     display: grid;
     grid-template-columns: 1fr;
     width: 100%;
@@ -434,306 +482,208 @@ button:hover {
     text-align: center;
   }
 }
-.header img {
+header img {
   height: 40px;
 }
-.header .linka {
+header nav {
   display: flex;
   gap: 40px;
 }
-@media (max-width:550px) {
-  .header .linka {
+@media (max-width:600px) {
+  header nav {
     gap: 0;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
   }
 }
-.header .linka a {
+header nav a {
   text-decoration: underline 0.15em transparent;
   transition: text-decoration-color 200ms, color 200ms, transform 200ms;
 }
-.header .linka a.active {
+header nav a.active {
   color: var(--active);
 }
-.header .linka a:hover {
+header nav a:hover {
   color: var(--active);
   text-decoration-color: var(--active);
   transform: translateY(-2px);
 }
-.header .linka a h4 {
+header nav a h4 {
   margin: 0;
 }
-@media (max-width:550px) {
-  .header .linka a h4 {
+@media (max-width:600px) {
+  header nav a h4 {
     font-size: 14px;
   }
 }
 
-#learn {
-  color: #ff7917;
-  font-weight: bold;
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 40px;
 }
-
-.index {
-  padding-top: 80px;
-}
-
-.main {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  background-color: var(--white);
-  box-shadow: 0px 3px 6px #00000029;
-  border-radius: 25px;
-  padding: 0px 0 0 80px;
-}
-@media (max-width:550px) {
-  .main {
-    display: block;
+@media (max-width:600px) {
+  footer {
+    flex-direction: column;
     padding: 20px;
+    text-align: center;
   }
 }
-.main h1 {
+footer img {
+  height: 40px;
+}
+
+.hero-section {
+  margin-top: 80px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  background-color: var(--white);
+  box-shadow: 0px 3px 6px #00000029;
+  border-radius: 15px;
+}
+@media (max-width:900px) {
+  .hero-section {
+    grid-template-columns: 1fr;
+    margin-top: 20px;
+  }
+}
+.hero-section .hero-text {
+  padding: 80px;
+}
+@media (max-width:600px) {
+  .hero-section .hero-text {
+    padding: 40px;
+  }
+}
+.hero-section .hero-text h1 {
   line-height: 1.1;
   font-size: 50px;
 }
-@media (max-width:550px) {
-  .main h1 {
+@media (max-width:600px) {
+  .hero-section .hero-text h1 {
     font-size: 32px;
   }
 }
-.main p {
+.hero-section .hero-text p {
   width: 100%;
 }
-.main #maininfo {
-  display: flex;
-  align-items: center;
-}
-.main .glasswrap {
+.hero-section .hero-image {
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: flex-end;
   justify-content: center;
-  padding-top: 80px;
 }
-@media (max-width:550px) {
-  .main .glasswrap {
-    display: none;
+@media (max-width:600px) {
+  .hero-section .hero-image img {
+    max-height: 200px;
   }
 }
-.main button {
-  margin-top: 40px;
+.hero-section button {
+  margin-top: 20px;
 }
-@media (max-width:550px) {
-  .main button {
+@media (max-width:600px) {
+  .hero-section button {
     margin-top: 10px;
     margin-bottom: 20px;
   }
 }
 
-.flavors {
+.flavors-section {
   margin-top: 80px;
 }
 
-.types {
+.flavors {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 40px;
 }
-@media (max-width:550px) {
-  .types {
+@media (max-width:600px) {
+  .flavors {
     grid-template-columns: 1fr;
+  }
+}
+@media (max-width:900px) {
+  .flavors {
     gap: 20px;
   }
 }
-.types div {
+.flavors a {
   background-color: var(--white);
   box-shadow: 0px 3px 6px #00000029;
-  border-radius: 25px;
+  border-radius: 15px;
   text-align: center;
-  padding-bottom: 20px;
+  padding: 40px 20px;
+  cursor: pointer;
+  transition: transform 0.25s ease-in-out;
 }
-.types div:hover {
-  animation: anime forwards 0.25s ease;
+.flavors a:hover {
+  transform: translateY(-5px);
 }
-.types img {
-  padding: 40px 115px 0px 115px;
+.flavors img {
+  max-width: 175px;
   width: 100%;
 }
-.types label {
-  font-size: 12px;
-  color: #b4b4b4;
+.flavors h3 {
+  margin-bottom: 0;
+}
+.flavors h3 small {
+  color: var(--neutral);
 }
 
-#hot {
-  color: #ff7917 !important;
-}
-
-#cold {
-  color: #3ba7c7 !important;
-}
-
-#recycle {
-  color: #72a03f !important;
-}
-
-.info {
+.info-section {
   display: flex;
   align-items: center;
-  padding-top: 80px;
-  margin-bottom: 80px;
-}
-@media (max-width:550px) {
-  .info {
-    display: grid;
-    grid-template-columns: 1fr;
-  }
-}
-.info img {
-  width: 100%;
-  margin-right: 112px;
-}
-@media (max-width:550px) {
-  .info img {
-    margin-right: 0;
-  }
-}
-
-#formin {
-  color: var(--cum);
-  font-family: Poppins;
-  background-color: var(--text);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  gap: 80px;
   padding: 80px 0;
 }
-@media (max-width:550px) {
-  #formin {
-    padding: 40px 40px;
+@media (max-width:600px) {
+  .info-section {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
   }
 }
-#formin .milkform {
+.info-section img {
   width: 100%;
-  max-width: 600px;
+}
+
+.email-section {
+  color: var(--milk);
+  background-color: var(--text);
+  padding: 80px 0;
   text-align: center;
 }
-#formin .milkform h1 {
-  margin: 0px;
-  font-size: 42px;
-}
-@media (max-width:550px) {
-  #formin .milkform h1 {
-    font-size: 34px;
+@media (max-width:600px) {
+  .email-section {
+    padding: 40px;
   }
 }
-#formin .milkform p {
+.email-section > div {
+  width: 100%;
   max-width: 600px;
-  font-size: 18px;
-  font-weight: 300;
+  margin: auto;
+}
+.email-section h1 {
+  margin: 0;
+}
+.email-section p {
   margin-bottom: 40px;
 }
-@media (max-width:550px) {
-  #formin .milkform p {
-    font-size: 16px;
+@media (max-width:600px) {
+  .email-section p {
     margin-bottom: 30px;
   }
 }
-#formin .milkform ::placeholder {
-  color: #fcfaf450;
-}
-#formin input,
-#formin select {
-  border-radius: 15px;
-  border-color: #fcfaf4;
-  border-style: solid;
-  display: block;
-  width: 100%;
-  padding: 10px 20px;
-  height: 50px;
-  background: #3f4952;
-  color: #fcfaf480;
-}
-#formin .emails {
-  display: grid;
-  grid-template-columns: 3fr 1fr;
+.email-section form {
+  display: flex;
   gap: 10px;
-  justify-content: center;
 }
-@media (max-width:550px) {
-  #formin .emails {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 20px;
-  }
-}
-#formin .emails button {
-  width: 100%;
-  height: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-#formin .emails input {
-  width: 100%;
-}
-
-.footer {
-  background-color: #fcfaf4;
-  box-shadow: 0px 3px 6px #00000029;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  padding: 20px 40px;
-}
-@media (max-width:550px) {
-  .footer {
-    display: block;
-    width: 100%;
-    padding: 20px;
-    text-align: center;
-  }
-}
-.footer img {
-  height: 40px;
-}
-.footer #socials {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-end;
-  gap: 20px;
-}
-@media (max-width:550px) {
-  .footer #socials {
-    justify-content: center;
-  }
-}
-.footer #rights {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-}
-@media (max-width:550px) {
-  .footer #rights {
-    display: grid;
-    grid-template-columns: 1fr;
-    width: 100%;
-    padding: 0 20px;
-  }
-}
-.footer #rights p {
-  margin-bottom: 0;
-}
-@media (max-width:550px) {
-  .footer #rights p {
-    margin-bottom: 20px;
-  }
-}
-.footer #rights img {
-  margin-left: 0px;
-}
-@media (max-width:550px) {
-  .footer #rights img {
-    width: 100%;
+@media (max-width:600px) {
+  .email-section form {
+    flex-direction: column;
   }
 }
 
@@ -741,7 +691,7 @@ button:hover {
   position: relative;
   padding: 80px;
 }
-@media (max-width:550px) {
+@media (max-width:600px) {
   .shoppy {
     padding: 40px;
   }
@@ -776,7 +726,7 @@ button:hover {
   font-size: 50px;
   margin: 0px;
 }
-@media (max-width:550px) {
+@media (max-width:600px) {
   .shoppy .shoppytext h1 {
     text-align: center;
     font-size: 40px;
@@ -786,7 +736,7 @@ button:hover {
   width: 600px;
   text-align: center;
 }
-@media (max-width:550px) {
+@media (max-width:600px) {
   .shoppy .shoppytext p {
     width: 100%;
     margin-bottom: 0px;
@@ -800,7 +750,7 @@ button:hover {
   padding-top: 80px;
   padding-bottom: 60px;
 }
-@media (max-width:550px) {
+@media (max-width:600px) {
   .shopflavors {
     grid-template-columns: 1fr;
     padding-top: 30px;
@@ -811,7 +761,7 @@ button:hover {
   top: 120px;
   align-self: start;
 }
-@media (max-width:550px) {
+@media (max-width:600px) {
   .shopflavors .note {
     padding: 10px 12px;
     position: static;
@@ -826,7 +776,7 @@ button:hover {
   gap: 40px;
   grid-template-rows: 1fr;
 }
-@media (max-width:550px) {
+@media (max-width:600px) {
   .milked {
     padding-bottom: 30px;
   }
@@ -837,9 +787,10 @@ button:hover {
   align-items: center;
   background-color: var(--white);
   box-shadow: 0px 3px 6px #00000029;
-  border-radius: 25px;
+  border-radius: 15px;
+  line-height: 1;
 }
-@media (max-width:550px) {
+@media (max-width:600px) {
   .milked .mflavors {
     display: block;
     padding: 20px;
@@ -847,8 +798,9 @@ button:hover {
 }
 .milked .flavtext {
   padding: 0 40px;
+  line-height: 1.2;
 }
-@media (max-width:550px) {
+@media (max-width:600px) {
   .milked .flavtext {
     text-align: center;
     padding: 0 20px;
@@ -857,7 +809,7 @@ button:hover {
 .milked .buy {
   filter: grayscale(1);
 }
-@media (max-width:550px) {
+@media (max-width:600px) {
   .milked .buy {
     width: 100%;
     margin-bottom: 10px;
@@ -866,12 +818,16 @@ button:hover {
 }
 .milked img {
   padding: 106px 40px;
-  border-radius: 25px 0 0 25px;
+  border-radius: 15px 0 0 15px;
 }
-@media (max-width:550px) {
+@media (max-width:600px) {
   .milked img {
     display: none;
   }
+}
+.milked .image-wrapper {
+  line-height: 1;
+  border-radius: 15px 0 0 15px;
 }
 .milked #fire {
   background-color: #fff0e3;
@@ -887,7 +843,7 @@ button:hover {
   font-size: 16px;
   color: #b4b4b4;
 }
-@media (max-width:550px) {
+@media (max-width:600px) {
   #shoplabel {
     font-size: 14px;
     margin: 0px;
@@ -901,7 +857,7 @@ button:hover {
   align-items: center;
   gap: 8px;
 }
-@media (max-width:550px) {
+@media (max-width:600px) {
   #recyclegrid {
     flex-direction: column;
   }
@@ -918,7 +874,7 @@ button:hover {
 #recycleshop {
   color: #72a03f;
 }
-@media (max-width:550px) {
+@media (max-width:600px) {
   #recycleshop {
     margin: 0px;
   }
@@ -927,7 +883,7 @@ button:hover {
 .intromilk {
   padding: 80px 20px;
 }
-@media (max-width:550px) {
+@media (max-width:600px) {
   .intromilk {
     padding-top: 20px;
     padding-bottom: 30px;
@@ -938,7 +894,7 @@ button:hover {
 .aboutmilk img {
   max-height: 420px;
   width: 100%;
-  border-radius: 25px;
+  border-radius: 15px;
 }
 
 .milktext {
@@ -952,23 +908,23 @@ button:hover {
   padding: 80px 20px;
   color: white;
 }
-@media (max-width:550px) {
+@media (max-width:600px) {
   .truth {
     padding: 40px 20px;
   }
 }
-@media (max-width:550px) {
+@media (max-width:600px) {
   .truth h1 {
     margin-top: 0px;
     text-align: center;
   }
 }
 .truth #cow {
-  border-radius: 50px;
+  border-radius: 15px;
   width: 100%;
 }
 
-@media (max-width:550px) {
+@media (max-width:600px) {
   .truthtext {
     text-align: center;
     order: -1;
@@ -986,12 +942,12 @@ button:hover {
   padding-top: 40px;
   padding-bottom: 80px;
 }
-@media (max-width:550px) {
+@media (max-width:600px) {
   .more {
     padding: 30px 20px;
   }
 }
-@media (max-width:550px) {
+@media (max-width:600px) {
   .more h1 {
     margin-top: 15px;
   }
@@ -1004,16 +960,20 @@ button:hover {
   margin: 0px;
 }
 
-@keyframes anime {
-  from {
-    transform: translateY(0px);
-  }
-  to {
-    transform: translateY(-5px);
+.grid-2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 80px;
+}
+@media (max-width:600px) {
+  .grid-2 {
+    grid-template-columns: 1fr;
+    gap: 40px;
   }
 }
+
 #contactin {
-  color: var(--cum);
+  color: var(--milk);
   font-family: Poppins;
   background-color: var(--text);
   display: flex;
@@ -1023,7 +983,7 @@ button:hover {
   margin: 0px;
   width: 100%;
 }
-@media (max-width:550px) {
+@media (max-width:600px) {
   #contactin {
     padding: 30px 30px;
   }
@@ -1031,7 +991,7 @@ button:hover {
 #contactin p {
   font-weight: 200;
 }
-@media (max-width:550px) {
+@media (max-width:600px) {
   #contactin p {
     font-size: 14px;
     text-align: center;
@@ -1043,7 +1003,7 @@ button:hover {
   font-size: 42px;
   width: 100%;
 }
-@media (max-width:550px) {
+@media (max-width:600px) {
   #contactin h2 {
     font-size: 30px;
   }
@@ -1055,16 +1015,10 @@ button:hover {
   gap: 20px;
   max-width: 600px;
 }
-@media (max-width:550px) {
+@media (max-width:600px) {
   #contactin #contactform {
     padding-bottom: 20px;
   }
-}
-#contactin #contactform input:focus::placeholder {
-  color: #3f4952;
-}
-#contactin :placeholder-shown {
-  color: #3f4952;
 }
 #contactin button {
   display: flex;
@@ -1072,49 +1026,11 @@ button:hover {
   align-items: center;
 }
 
-input,
-select {
-  border-radius: 15px;
-  border-color: #fcfaf4;
-  border-style: solid;
-  display: block;
-  width: 100%;
-  padding: 10px 20px;
-  height: 50px;
-  background: #3f4952;
-  color: #fcfaf480;
-}
-input:focus,
-select:focus {
-  background-color: #fcfaf4;
-  outline: 0;
-  color: #3f4952;
-}
-
-#textarea {
-  height: 100px;
-  width: 100%;
-  border-radius: 15px;
-  border-color: #fcfaf4;
-  border-style: solid;
-  display: block;
-  width: 100%;
-  padding: 10px 20px;
-  background: #3f4952;
-  color: #fcfaf480;
-  resize: none;
-}
-#textarea:focus {
-  background-color: #fcfaf4;
-  outline: 0;
-  color: #3f4952;
-}
-
 .contact {
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
-@media (max-width:550px) {
+@media (max-width:600px) {
   .contact {
     grid-template-columns: 1fr;
   }
@@ -1124,7 +1040,7 @@ select:focus {
   height: 750px;
   object-fit: cover;
 }
-@media (max-width:550px) {
+@media (max-width:600px) {
   .contact img {
     display: none;
   }
