--- a/public/sass/_about.scss
+++ b/public/sass/_about.scss
@@ -12,7 +12,7 @@
   img {
     max-height: 420px;
     width: 100%;
-    border-radius: 25px;
+    border-radius: $br;
   }
 }
 
@@ -39,7 +39,7 @@
   color: white;
 
   #cow {
-    border-radius: 50px;
+    border-radius: $br;
     width: 100%;
   }
 }
@@ -77,5 +77,15 @@
     text-align: center;
     font-size: 18px;
     margin: 0px;
+  }
+}
+.grid-2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 80px;
+
+  @media ($mobile) {
+    grid-template-columns: 1fr;
+    gap: 40px;
   }
 }
