--- a/public/sass/_contactform.scss
+++ b/public/sass/_contactform.scss
@@ -10,7 +10,7 @@
     }
     font-weight: 200;
   }
-  color: var(--cum);
+  color: var(--milk);
   font-family: Poppins;
   background-color: var(--text);
   display: flex;
@@ -39,13 +39,6 @@
     width: 100%;
     gap: 20px;
     max-width: 600px;
-
-    input:focus::placeholder {
-      color: #3f4952;
-    }
-  }
-  :placeholder-shown {
-    color: #3f4952;
   }
 
   button {
@@ -55,45 +48,6 @@
   }
 }
 
-input,
-select {
-  // margin: 20px 0 20px 0;
-  border-radius: 15px;
-  border-color: #fcfaf4;
-  border-style: solid;
-  display: block;
-  width: 100%;
-  padding: 10px 20px;
-  height: 50px;
-  background: #3f4952;
-  color: #fcfaf480;
-
-  &:focus {
-    background-color: #fcfaf4;
-    outline: 0;
-    color: #3f4952;
-  }
-}
-
-#textarea {
-  height: 100px;
-  width: 100%;
-  border-radius: 15px;
-  border-color: #fcfaf4;
-  border-style: solid;
-  display: block;
-  width: 100%;
-  padding: 10px 20px;
-  background: #3f4952;
-  color: #fcfaf480;
-  resize: none;
-
-  &:focus {
-    background-color: #fcfaf4;
-    outline: 0;
-    color: #3f4952;
-  }
-}
 .contact {
   @media ($mobile) {
     grid-template-columns: 1fr;
