--- a/public/sass/_footer.scss
+++ b/public/sass/_footer.scss
@@ -1,60 +1,16 @@
-.footer {
+footer {
   @media ($mobile) {
-    display: block;
-    width: 100%;
+    flex-direction: column;
     padding: 20px;
     text-align: center;
   }
 
-  background-color: #fcfaf4;
-  box-shadow: 0px 3px 6px #00000029;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   padding: 20px 40px;
 
   img {
     height: 40px;
-  }
-
-  #socials {
-    @media ($mobile) {
-      justify-content: center;
-    }
-
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-end;
-    gap: 20px;
-  }
-
-  #rights {
-    @media ($mobile) {
-      display: grid;
-      grid-template-columns: 1fr;
-      width: 100%;
-      padding: 0 20px;
-    }
-
-    p {
-      @media ($mobile) {
-        margin-bottom: 20px;
-      }
-
-      margin-bottom: 0;
-    }
-
-    img {
-      @media ($mobile) {
-        width: 100%;
-      }
-
-      margin-left: 0px;
-    }
-
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
   }
 }
