--- a/public/sass/_form.scss
+++ b/public/sass/_form.scss
@@ -1,80 +1,30 @@
-#formin {
-  @media ($mobile) {
-    padding: 40px 40px;
+input,
+select,
+textarea {
+  // margin: 20px 0 20px 0;
+  border-radius: $br;
+  border: solid 2px var(--milk);
+  display: block;
+  width: 100%;
+  padding: 10px 20px;
+  background: var(--text);
+  color: var(--milk);
+
+  &:focus {
+    background-color: var(--milk);
+    outline: 0;
+    color: var(--text);
   }
-
-  color: var(--cum);
-  font-family: Poppins;
-  background-color: var(--text);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 80px 0;
-
-  .milkform {
-    width: 100%;
-    max-width: 600px;
-    text-align: center;
-
-    h1 {
-      @media ($mobile) {
-        font-size: 34px;
-      }
-
-      margin: 0px;
-      font-size: 42px;
-    }
-
-    p {
-      @media ($mobile) {
-        font-size: 16px;
-        margin-bottom: 30px;
-      }
-
-      max-width: 600px;
-      font-size: 18px;
-      font-weight: 300;
-      margin-bottom: 40px;
-    }
-    ::placeholder {
-      color: #fcfaf450;
-    }
-  }
-
-  input,
-  select {
-    // margin: 20px 0 20px 0;
-    border-radius: 15px;
-    border-color: #fcfaf4;
-    border-style: solid;
-    display: block;
-    width: 100%;
-    padding: 10px 20px;
-    height: 50px;
-    background: #3f4952;
+  ::placeholder {
     color: #fcfaf480;
+    opacity: 1;
   }
-  .emails {
-    @media ($mobile) {
-      display: grid;
-      grid-template-columns: 1fr;
-      gap: 20px;
-    }
-
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-    gap: 10px;
-    justify-content: center;
-
-    button {
-      width: 100%;
-      height: 50px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    input {
-      width: 100%;
-    }
-  }
+}
+input,
+select {
+  height: 60px;
+}
+textarea {
+  height: 100px;
+  resize: none;
 }
