--- a/public/sass/_header.scss
+++ b/public/sass/_header.scss
@@ -1,4 +1,4 @@
-.header {
+header {
   @media ($mobile) {
     display: grid;
     grid-template-columns: 1fr;
@@ -19,13 +19,13 @@
   left: 0px;
   right: 0px;
   background-color: var(--white);
-  box-shadow: 0px 3px 6px #00000029;
+  box-shadow: $shadow;
 
   img {
     height: 40px;
   }
 
-  .linka {
+  nav {
     @media ($mobile) {
       gap: 0;
       display: grid;
