--- a/public/sass/_info.scss
+++ b/public/sass/_info.scss
@@ -1,20 +1,16 @@
-.info {
+.info-section {
   @media ($mobile) {
     display: grid;
     grid-template-columns: 1fr;
+    gap: 10px;
   }
 
   display: flex;
   align-items: center;
-  padding-top: 80px;
-  margin-bottom: 80px;
+  gap: 80px;
+  padding: 80px 0;
 
   img {
-    @media ($mobile) {
-      margin-right: 0;
-    }
-
     width: 100%;
-    margin-right: 112px;
   }
 }
