--- a/public/sass/_shop.scss
+++ b/public/sass/_shop.scss
@@ -101,7 +101,8 @@
     align-items: center;
     background-color: var(--white);
     box-shadow: 0px 3px 6px #00000029;
-    border-radius: 25px;
+    border-radius: $br;
+    line-height: 1;
   }
 
   .flavtext {
@@ -111,6 +112,7 @@
     }
 
     padding: 0 40px;
+    line-height: 1.2;
   }
 
   .buy {
@@ -129,9 +131,12 @@
     }
 
     padding: 106px 40px;
-    border-radius: 25px 0 0 25px;
+    border-radius: $br 0 0 $br;
   }
-
+  .image-wrapper {
+    line-height: 1;
+    border-radius: $br 0 0 $br;
+  }
   #fire {
     background-color: #fff0e3;
   }
